tests/fixtures/positive/performance/UnnecessaryTemporaryInstantiation.kt
package fixtures.positive.performance

fun convert(x: Int): String {
    return Integer.valueOf(x).toString()
}
